--- a/haskell/ProjectEuler.cabal
+++ b/haskell/ProjectEuler.cabal
@@ -18,6 +18,7 @@ source-repository head
 library
     hs-source-dirs:       src
     default-language:     Haskell2010
+    exposed-modules:      Euler
     other-modules:        Euler.Problem1
     build-depends:        base
     ghc-options:          -Wall
