--- a/haskell/ProjectEuler.cabal
+++ b/haskell/ProjectEuler.cabal
@@ -6,7 +6,6 @@ copyright:                (c) 2014 David Strickland
 bug-reports:              https://github.com/d-strickland/ProjectEuler/issues
 homepage:                 https://github.com/d-strickland/ProjectEuler
 synopsis:                 David Strickland's solutions to Project Euler problems
-stability:                ehhh
 build-type:               Simple
 cabal-version:            >=1.16
 tested-with:              GHC>=7.6.3
@@ -20,7 +19,7 @@ library
     default-language:     Haskell2010
     exposed-modules:      Euler
     other-modules:        Euler.Problem1
-    build-depends:        base
+    build-depends:        base, digits
     ghc-options:          -Wall
                           -O2
 
@@ -34,4 +33,5 @@ test-suite euler-tests
                           QuickCheck,
                           tasty,
                           tasty-hunit,
-                          tasty-quickcheck
+                          tasty-quickcheck,
+                          digits
