--- a/haskell/ProjectEuler.cabal
+++ b/haskell/ProjectEuler.cabal
@@ -19,7 +19,7 @@ library
     default-language:     Haskell2010
     exposed-modules:      Euler
     other-modules:        Euler.Problem1
-    build-depends:        base, digits
+    build-depends:        base, digits, data-ordlist
     ghc-options:          -Wall
                           -O2
 
@@ -28,10 +28,5 @@ test-suite euler-tests
     default-language:     Haskell2010
     hs-source-dirs:       test, src
     main-is:              TestMain.hs
-    build-depends:        base,
-                          HUnit,
-                          QuickCheck,
-                          tasty,
-                          tasty-hunit,
-                          tasty-quickcheck,
-                          digits
+    build-depends:        base, HUnit, QuickCheck, tasty, tasty-hunit,
+                          tasty-quickcheck, digits, data-ordlist
