--- a/haskell/ProjectEuler.cabal
+++ b/haskell/ProjectEuler.cabal
@@ -7,18 +7,29 @@ bug-reports:              https://github.com/d-strickland/ProjectEuler/issues
 homepage:                 https://github.com/d-strickland/ProjectEuler
 synopsis:                 David Strickland's solutions to Project Euler problems
 build-type:               Simple
-cabal-version:            >=1.16
+cabal-version:            >=1.20
 tested-with:              GHC>=7.6.3
 
 source-repository head
     type:                 git
     location:             https://github.com/d-strickland/ProjectEuler.git
 
+executable euler
+    type:                 exitcode-stdio-1.0
+    hs-source-dirs:       main
+    main-is:              Main.hs
+    build-depends:        base, ProjectEuler
+    default-language:     Haskell2010
+
 library
     hs-source-dirs:       src
     default-language:     Haskell2010
     exposed-modules:      Euler
-    other-modules:        Euler.Problem1
+    other-modules:        Euler.Problem1, Euler.Problem2, Euler.Problem3,
+                          Euler.Problem4, Euler.Problem5, Euler.Problem6,
+                          Euler.Problem7, Euler.Problem8, Euler.Problem9,
+                          Euler.Problem10, Euler.Problem11, Euler.Problem12,
+                          Euler.Problem13, Euler.Problem14
     build-depends:        base, digits, data-ordlist
     ghc-options:          -Wall
                           -O2
