Solved problem 18 (looked more interesting than 17).

--- a/haskell/ProjectEuler.cabal
+++ b/haskell/ProjectEuler.cabal
@@ -15,7 +15,6 @@ source-repository head
     location:             https://github.com/d-strickland/ProjectEuler.git
 
 executable euler
-    type:                 exitcode-stdio-1.0
     hs-source-dirs:       main
     main-is:              Main.hs
     build-depends:        base, ProjectEuler
@@ -30,7 +29,7 @@ library
                           Euler.Problem7, Euler.Problem8, Euler.Problem9,
                           Euler.Problem10, Euler.Problem11, Euler.Problem12,
                           Euler.Problem13, Euler.Problem14, Euler.Problem15,
-                          Euler.Problem16
+                          Euler.Problem16, Euler.Problem18
     build-depends:        base, digits, data-ordlist, combinat
     ghc-options:          -Wall
                           -O2
