--- a/haskell/ProjectEuler.cabal
+++ b/haskell/ProjectEuler.cabal
@@ -29,7 +29,7 @@ library
                           Euler.Problem7, Euler.Problem8, Euler.Problem9,
                           Euler.Problem10, Euler.Problem11, Euler.Problem12,
                           Euler.Problem13, Euler.Problem14, Euler.Problem15,
-                          Euler.Problem16, Euler.Problem18
+                          Euler.Problem16, Euler.Problem17, Euler.Problem18
     build-depends:        base, digits, data-ordlist, combinat
     ghc-options:          -Wall
                           -O2
